# databricks-course

./: .gitignore  1.git-demo-notebook.ipynb  CLAUDE.md  README.md
assets/input_data/stock_prices/: stock_prices_day1.json  stock_prices_day2.json  stock_prices_day3.json
code/pipelines/raw_ingestion/: pipeline.py
code/src/: pyproject.toml
code/src/io_lakehouse/: __init__.py  entity_config.py  ingest.py  main.py  reader.py  setup.py  writer.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/catalog/: main.tf  outputs.tf  variables.tf
terraform/modules/jobs/: main.tf  outputs.tf  variables.tf
terraform/modules/pipeline/: main.tf  outputs.tf  variables.tf
